crates/swc_ecma_parser/tests/test262-error-references/fail/bdb0f8dd27e0e164.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/bdb0f8dd27e0e164.js:1:9
  |
1 | var x = "
  |         ^

